--- a/1) read_file_chunks.ipynb
+++ b/1) read_file_chunks.ipynb
@@ -2,18 +2,155 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f5f79308",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter"
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "import os\n",
+    "from langchain_community.document_loaders import DirectoryLoader,TextLoader\n",
+    "import tiktoken\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "588fcb9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_documents(root_path:str):\n",
+    "    \"\"\"\n",
+    "    Loads all markdown(.md) Files from a directory\n",
+    "    \"\"\"\n",
+    "    loader = DirectoryLoader(\n",
+    "        path= root_path,\n",
+    "        glob=\"**/*.md\", # go into all folders and fetch .md file \n",
+    "        loader_cls=TextLoader, #used textloader for each .md file\n",
+    "        loader_kwargs={\n",
+    "         \"encoding\":\"utf-8\",\n",
+    "         \"autodetect_encoding\":\"True\"\n",
+    "        }\n",
+    "    )\n",
+    "    try:\n",
+    "        docs =loader.load()\n",
+    "\n",
+    "        print( f\"loaded {len(docs)} documents from {root_path}\")\n",
+    "        return docs\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f'error loading documents {e}')\n",
+    "        # return []\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "98545174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded 76 documents from C:\\Users\\Mohamed Arshad\\Downloads\\My_RAG_Lab\\llm_engineering\\week5\\knowledge-base\n"
+     ]
+    }
+   ],
+   "source": [
+    "path =r\"C:\\Users\\Mohamed Arshad\\Downloads\\My_RAG_Lab\\llm_engineering\\week5\\knowledge-base\"\n",
+    "\n",
+    "documents =load_documents(root_path=path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1df7832f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(metadata={'source': 'C:\\\\Users\\\\Mohamed Arshad\\\\Downloads\\\\My_RAG_Lab\\\\llm_engineering\\\\week5\\\\knowledge-base\\\\products\\\\Rellm.md'}, page_content=\"# Product Summary\\n\\n# Rellm: AI-Powered Enterprise Reinsurance Solution\\n\\n## Summary\\n\\nRellm is an innovative enterprise reinsurance product developed by Insurellm, designed to transform the way reinsurance companies operate. Harnessing the power of artificial intelligence, Rellm offers an advanced platform that redefines risk management, enhances decision-making processes, and optimizes operational efficiencies within the reinsurance industry. With seamless integrations and robust analytics, Rellm enables insurers to proactively manage their portfolios and respond to market dynamics with agility.\\n\\n## Features\\n\\n### AI-Driven Analytics\\nRellm utilizes cutting-edge AI algorithms to provide predictive insights into risk exposures, enabling users to forecast trends and make informed decisions. Its real-time data analysis empowers reinsurance professionals with actionable intelligence.\\n\\n### Seamless Integrations\\nRellm's architecture is designed for effortless integration with existing systems. Whether it's policy management, claims processing, or financial reporting, Rellm connects seamlessly with diverse data sources to create a unified ecosystem.\\n\\n### Risk Assessment Module\\nThe comprehensive risk assessment module within Rellm allows insurers to evaluate risk profiles accurately. By leveraging historical data and advanced modeling techniques, Rellm provides a clear picture of potential liabilities and expected outcomes.\\n\\n### Customizable Dashboard\\nRellm features a customizable dashboard that presents key metrics and performance indicators in an intuitive interface. Users can tailor their view to focus on what matters most to their business, enhancing user experience and productivity.\\n\\n### Regulatory Compliance Tools\\nRellm includes built-in compliance tracking features to help organizations meet local and international regulatory standards. This ensures that reinsurance practices remain transparent and accountable.\\n\\n### Client and Broker Portals\\nRellm offers dedicated portals for both clients and brokers, facilitating real-time communication and documentation sharing. This strengthens partnerships and drives operational excellence across the board.\\n\\n## Pricing\\n\\nInsurellm offers flexible pricing plans for Rellm to cater to various business needs:\\n\\n- **Basic Plan**: $5,000/month\\n  - Includes access to core features and standard integrations.\\n  \\n- **Professional Plan**: $10,000/month\\n  - Includes all features, advanced integrations, and priority customer support.\\n  \\n- **Enterprise Plan**: Custom pricing\\n  - Tailored solutions with personalized features, extensive integrations, and dedicated account management.\\n\\nJoin the growing number of organizations leveraging Rellm to enhance their reinsurance processes while driving profitability and compliance. \\n\\n## 2025-2026 Roadmap\\n\\nAt Insurellm, we are committed to the continuous improvement of Rellm. Our roadmap for 2025-2026 includes:\\n\\n- **Q3 2025**: \\n  - Launch of the Rellm Mobile App for on-the-go insights and management.\\n  - Introduction of augmented reality (AR) features for interactive risk assessments.\\n\\n- **Q1 2026**: \\n  - Deployment of advanced machine learning models for even more accurate risk predictions.\\n  - Expansion of integration capabilities to support emerging technologies in the insurance sector.\\n\\n- **Q3 2026**: \\n  - Release of a community platform for Rellm users to exchange insights, tips, and best practices.\\n  - Launch of Rellm 2.0, featuring enhanced user interface and premium features based on user feedback.\\n\\nExperience the future of reinsurance with Rellm, where innovation meets reliability. Let Insurellm help you navigate the complexities of the reinsurance market smarter and faster.\")"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[75]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4b4af0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_tokens(docs):\n",
+    "    \"\"\"\n",
+    "    Count the no. of. tokens\n",
+    "    \"\"\"\n",
+    "    enc =tiktoken.get_encoding(\"cl100k_base\")\n",
+    "    total_tokens=0\n",
+    "\n",
+    "    for d in docs:\n",
+    "        num_tokens =len(enc.encode(d.page_content))\n",
+    "        total_tokens =total_tokens+num_tokens\n",
+    "    \n",
+    "    print(f\"total no of tokens are :{total_tokens}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6841d525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total no of tokens are :63715\n"
+     ]
+    }
+   ],
+   "source": [
+    "total =count_tokens(docs=documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c49e307",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
