--- a/4) Reranker_MMR_CrossEncoder.ipynb
+++ b/4) Reranker_MMR_CrossEncoder.ipynb
@@ -1,9 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "78df6286",
+   "metadata": {},
+   "source": [
+    "MMR (Max Marginal Relevance)?\n",
+    "\n",
+    "MMR is a retrieval algorithm that tries to pick documents that are:\n",
+    "\n",
+    "-> Different from each other (diverse)\n",
+    "\n",
+    "-> reduces redundancy\n",
+    "\n",
+    "When to use MMR in RAG?\n",
+    "\n",
+    "If your chunks are very similar (policies, SOPs, safety, medical, ICSR cases):\n",
+    "MMR gives diverse chunks → better coverage → better grounding.\n",
+    "\n",
+    "Multi-hop reasoning -> Your agent needs multiple different facts from different places.\n",
+    "\n",
+    "RAG hallucination reduction->LLMs hallucinate when the retrieved documents do not cover the question -> MMR increases coverage, preventing hallucinations.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "bc328d02",
+   "execution_count": null,
+   "id": "47bc2420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +142,12 @@
     "    }\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "339fdd29",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
